# lazytrade

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/cli-candlestick-chart/src/: chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  volume_pane.rs
src/: api.rs  app.rs  config.rs  event.rs  main.rs  ui.rs
