[package]
name = "lazytrade"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 0

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
dirs = "5.0"
cli-candlestick-chart = { path = "crates/cli-candlestick-chart", default-features = false }
ansi-parser = "0.9"
unicode-width = "0.1"
